# app/Http/Controllers/User/UserController.php
@@ -104,10 +104,15 @@ class UserController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/users",
+     *     path="/list",
      *     summary="Get all users",
-     *     @OA\Response(response="200", description="List of users"),
-     *     security={{"api_key": {}}}
+     *     tags={"Authentication"},
+     *     security={{ "Token": {} }},
+     *     @OA\Response(response="200", description="Successful operation", @OA\JsonContent()),
+     *     @OA\Response(response="400", description="Bad request", @OA\JsonContent()),
+     *     @OA\Response(response="401", description="Unauthorized", @OA\JsonContent()),
+     *     @OA\Response(response="404", description="Not found", @OA\JsonContent()),
+     *     @OA\Response(response="500", description="Internal server error", @OA\JsonContent()),
      * )
      */
     public function getUsers()
